--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
               </ul>
             </div>
           </div>
-
           <div class="bottom_sidebar">
             <p><i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i> Installa app</p>
             <div class="line"></div>
@@ -50,6 +49,87 @@
             <a class="button" href="#">EFFETTUA L'UPGRADE</a>
           </div>
         </section>
+        <!-- spazio principale con album -->
+        <section class="album">
+          <div class="nav_bar">
+            <ul>
+              <li><a href="#">IN EVIDENZA</a> </li>
+              <li><a href="#">PODCAST</a> </li>
+              <li><a href="#">CLASSIFICHE</a> </li>
+              <li><a href="#">GENERI E MOOD</a> </li>
+              <li><a href="#">NUOVE USCITE</a> </li>
+              <li><a href="#">SCOPRI</a> </li>
+            </ul>
+          </div>
+          <div class="recently_played">
+            <h3>Recently played</h3>
+            <div class="dischi">
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+            </div>
+          </div>
+          <div class="creato_per">
+            <h3>Creato per John Doe</h3>
+            <div class="dischi">
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+            </div>
+
+          </div>
+          <div class="artisti_pop">
+            <h3>Artisti più popolari</h3>
+            <div class="dischi">
+              <div class="disco">
+                <a class="copertina" href="#"><img class="circle"src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+              <div class="disco">
+                <a class="copertina" href="#"><img class="circle" src="img/stranger.jpeg" alt=""></a>
+                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <p class="artista">Kyle Dixon</p>
+              </div>
+            </div>
+
+          </div>
+        </section>
+
       </section>
       <section id="player">
       </section>
