--- a/index.html
+++ b/index.html
@@ -70,68 +70,80 @@
                 <p class="artista">Kyle Dixon</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
-                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <a class="copertina" href="#"><img src="img/metal_lifting.jpg" alt=""></a>
+                <p class="titolo_disco">Heavy Metal</p>
+                <p class="artista">Subtitle</p>
+              </div>
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/aquietplace.jpeg" alt=""></a>
+                <p class="titolo_disco">A quiet place</p>
+                <p class="artista">Subtitle</p>
+              </div>
+              <div class="disco">
+                <a class="copertina" href="#"><img src="img/split.jpeg" alt=""></a>
+                <p class="titolo_disco">Split</p>
                 <p class="artista">Kyle Dixon</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
-                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <a class="copertina" href="#"><img src="img/sinister.jpeg" alt=""></a>
+                <p class="titolo_disco">Sinister</p>
                 <p class="artista">Kyle Dixon</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
-                <p class="titolo_disco">Stranger Things Vol.1</p>
-                <p class="artista">Kyle Dixon</p>
-              </div>
-              <div class="disco">
-                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
-                <p class="titolo_disco">Stranger Things Vol.1</p>
-                <p class="artista">Kyle Dixon</p>
-              </div>
-              <div class="disco">
-                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
-                <p class="titolo_disco">Stranger Things Vol.1</p>
+                <a class="copertina" href="#"><img src="img/cure.jpeg" alt=""></a>
+                <p class="titolo_disco">A cure for wellness</p>
                 <p class="artista">Kyle Dixon</p>
               </div>
             </div>
           </div>
           <div class="creato_per">
             <h3>Creato per John Doe</h3>
+            <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
             <div class="dischi">
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
-                <p class="titolo_disco">Stranger Things Vol.1</p>
-                <p class="artista">Kyle Dixon</p>
+                <a class="copertina" href="#"><img src="img/radar.jpeg" alt=""></a>
+                <p class="titolo_disco">Release Radar</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
-                <p class="titolo_disco">Stranger Things Vol.1</p>
-                <p class="artista">Kyle Dixon</p>
+                <a class="copertina" href="#"><img src="img/mixdaily.jpeg" alt=""></a>
+                <p class="titolo_disco">Daily Mix 1</p>
               </div>
             </div>
-
           </div>
           <div class="artisti_pop">
             <h3>Artisti più popolari</h3>
+            <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
             <div class="dischi">
               <div class="disco">
-                <a class="copertina" href="#"><img class="circle"src="img/stranger.jpeg" alt=""></a>
-                <p class="titolo_disco">Stranger Things Vol.1</p>
-                <p class="artista">Kyle Dixon</p>
+                <a class="copertina" href="#"><img class="circle"src="img/youg.jpeg" alt=""></a>
+                <p class="titolo_disco">Lana Del Rey</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img class="circle" src="img/stranger.jpeg" alt=""></a>
-                <p class="titolo_disco">Stranger Things Vol.1</p>
-                <p class="artista">Kyle Dixon</p>
+                <a class="copertina" href="#"><img class="circle" src="img/einaudi.jpeg" alt=""></a>
+                <p class="titolo_disco">Ludovico Einaudi</p>
               </div>
             </div>
-
           </div>
         </section>
-
       </section>
       <section id="player">
+        <div class="player_sx">
+          <div class="cover_sx">
+            <img src="img/sinister.jpeg" alt="">
+            <div class="">
+              <div class="player_artist">
+                <p>Sinister</p>
+              </div>
+              <div class="player_song">
+                <p>Name track</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="player_center">
+        </div>
+        <div class="player_dx">
+        </div>
       </section>
     </main>
   </body>
