--- a/index.html
+++ b/index.html
@@ -139,10 +139,41 @@
               </div>
             </div>
           </div>
+          <div class="icon_sx">
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+            <i class="fa fa-folder-o" aria-hidden="true"></i>
+          </div>
         </div>
         <div class="player_center">
+          <div class="control">
+            <div>
+              <i class="fa fa-random" aria-hidden="true"></i>
+              <i class="fa fa-step-backward" aria-hidden="true"></i>
+              <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+              <i class="fa fa-step-forward" aria-hidden="true"></i>
+              <i class="fa fa-repeat" aria-hidden="true"></i>
+            </div>
+          </div>
+          <div class="time">
+            <p>0:25</p>
+            <div class="line_2">
+            </div>
+            <div class="line_3">
+            </div>
+            <p>4:35</p>
+          </div>
         </div>
         <div class="player_dx">
+          <i class="fa fa-list-ul" aria-hidden="true"></i>
+          <i class="fa fa-desktop" aria-hidden="true"></i>
+          <i class="fa fa-volume-up" aria-hidden="true"></i>
+          <div class="volume_line">
+              <div class="line_4">
+              </div>
+              <div class="line_5">
+              </div>
+          </div>
+
         </div>
       </section>
     </main>
