--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <main>
-
       <section id="sidebar">
         <div class="logo flex">
           <img class="scale_img" src="img/logo.svg" alt="spotify">
@@ -42,7 +41,6 @@
           </div>
         </div>
       </section>
-
       <section id="main-window">
         <section id="up_bar">
           <div class="">
@@ -53,7 +51,7 @@
         <section class="album">
           <div class="nav_bar">
             <ul>
-              <li><a href="#">IN EVIDENZA</a> </li>
+              <li><a href="#">IN EVIDENZA <div class="green"></div> </a> </li>
               <li><a href="#">PODCAST</a> </li>
               <li><a href="#">CLASSIFICHE</a> </li>
               <li><a href="#">GENERI E MOOD</a> </li>
@@ -61,6 +59,7 @@
               <li><a href="#">SCOPRI</a> </li>
             </ul>
           </div>
+          <!-- bordo verde -->
           <div class="recently_played">
             <h3>Recently played</h3>
             <div class="dischi">
