--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <ul>
                 <li class="border_left_green"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
                 <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i> Cerca</a></li>
-                <li><a href="#">La tua libreria</a></li>
+                <li><a href="#"><img class="scala_20"src="img/libreria.svg" alt=""> La tua libreria</a></li>
               </ul>
             </nav>
             <!-- playlist -->
@@ -37,7 +37,21 @@
           <div class="bottom_sidebar">
             <p><i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i> Installa app</p>
             <div class="line"></div>
-            <p><i class="fa fa-user-circle" aria-hidden="true"><strong> John Doe</strong></i> </p>
+            <p><i class="fa fa-user-circle" aria-hidden="true"><strong> Alex</strong></i> </p>
+          </div>
+        </div>
+      </section>
+      <section id="sidebar_xs">
+        <div class="xs_up">
+          <img class="ridimensiona" src="img/logo-small.svg" alt="spotify">
+          <img class="ridimensiona" src="img/home.svg" alt="home">
+          <img class="ridimensiona" src="img/search.svg" alt="search">
+          <img class="ridimensiona" src="img/libreria.svg" alt="libreria">
+        </div>
+        <div class="xs_bottom">
+          <i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i>
+          <div class="profile_img ridimensiona">
+            <img src="img/profile.svg" alt="">
           </div>
         </div>
       </section>
@@ -128,13 +142,13 @@
       <section id="player">
         <div class="player_sx">
           <div class="cover_sx">
-            <img src="img/sinister.jpeg" alt="">
+            <img src="img/u2.jpg" alt="">
             <div class="">
               <div class="player_artist">
-                <p>Sinister</p>
+                <p>U2</p>
               </div>
               <div class="player_song">
-                <p>Name track</p>
+                <p>Hold me...</p>
               </div>
             </div>
           </div>
