--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             <div id="playlist">
               <ul>
                 <li><strong>PLAYLIST</strong></li>
-                <li><i class="fa fa-plus" aria-hidden="true"></i> Crea Playlist</li>
-                <li>Nome playlist</li>
-                <li>Nome playlist</li>
-                <li>Nome playlist</li>
-                <li>Nome playlist</li>
-                <li>Nome playlist</li>
+                <li><a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>  Crea Playlist</li>
+                <li><a href="#">Playlist 01</a></li>
+                <li><a href="#">Playlist 02</a></li>
+                <li><a href="#">Playlist 03</a></li>
+                <li><a href="#">Playlist 04</a></li>
+                <li><a href="#">Playlist 05</a></li>
               </ul>
             </div>
           </div>
           <div class="bottom_sidebar">
-            <p><i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i> Installa app</p>
+            <p><a href="#"><i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i> Installa app</a>  </p>
             <div class="line"></div>
             <p><i class="fa fa-user-circle" aria-hidden="true"><strong> Alex</strong></i> </p>
           </div>
@@ -44,15 +44,14 @@
       <section id="sidebar_xs">
         <div class="xs_up">
           <img class="ridimensiona" src="img/logo-small.svg" alt="spotify">
-          <img class="ridimensiona" src="img/home.svg" alt="home">
-          <img class="ridimensiona" src="img/search.svg" alt="search">
-          <img class="ridimensiona" src="img/libreria.svg" alt="libreria">
+          <a href="#"><img class="ridimensiona" src="img/home.svg" alt="home"></a>
+          <a href="#"><img class="ridimensiona" src="img/search.svg" alt="search"></a>
+          <a href="#"><img class="ridimensiona" src="img/libreria.svg" alt="libreria"></a>
         </div>
         <div class="xs_bottom">
-          <i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i>
-          <div class="profile_img ridimensiona">
-            <img src="img/profile.svg" alt="">
-          </div>
+          <a href="#"><i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i></a>
+          <a href="#"><div class="profile_img ridimensiona"><img src="img/profile.svg" alt=""></div>
+          </a>
         </div>
       </section>
       <section id="main-window">
@@ -145,7 +144,7 @@
             <img src="img/u2.jpg" alt="">
             <div class="">
               <div class="player_artist">
-                <p>U2</p>
+                <a href="#"><p>U2</p></a> 
               </div>
               <div class="player_song">
                 <p>Hold me...</p>
