Implementazione Hover su cover

--- a/index.html
+++ b/index.html
@@ -77,32 +77,62 @@
             <h3>Recently played</h3>
             <div class="dischi">
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/stranger.jpeg" alt=""></a>
+                <div class="cover">
+                  <a class="copertina" href="#">
+                    <img src="img/stranger.jpeg" alt="">
+                    <div class="overlay"><i class="fa fa-play-circle-o" aria-hidden="true"></i></div>
+                  </a>
+                </div>
                 <p class="titolo_disco">Stranger Things Vol.1</p>
                 <p class="artista">Kyle Dixon</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/metal_lifting.jpg" alt=""></a>
+                <div class="cover">
+                  <a class="copertina" href="#">
+                    <img src="img/metal_lifting.jpg" alt="">
+                    <div class="overlay"><i class="fa fa-play-circle-o" aria-hidden="true"></i></div>
+                  </a>
+                </div>
                 <p class="titolo_disco">Heavy Metal</p>
                 <p class="artista">Subtitle</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/aquietplace.jpeg" alt=""></a>
+                <div class="cover">
+                  <a class="copertina" href="#">
+                    <img src="img/aquietplace.jpeg" alt="">
+                    <div class="overlay"><i class="fa fa-play-circle-o" aria-hidden="true"></i></div>
+                  </a>
+                </div>
                 <p class="titolo_disco">A quiet place</p>
                 <p class="artista">Subtitle</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/split.jpeg" alt=""></a>
+                <div class="cover">
+                  <a class="copertina" href="#">
+                    <img src="img/split.jpeg" alt="">
+                    <div class="overlay"><i class="fa fa-play-circle-o" aria-hidden="true"></i></div>
+                  </a>
+                </div>
                 <p class="titolo_disco">Split</p>
                 <p class="artista">Kyle Dixon</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/sinister.jpeg" alt=""></a>
+                <div class="cover">
+                  <a class="copertina" href="#">
+                    <img src="img/sinister.jpeg" alt="">
+                    <div class="overlay"><i class="fa fa-play-circle-o" aria-hidden="true"></i></div>
+                  </a>
+                </div>
                 <p class="titolo_disco">Sinister</p>
                 <p class="artista">Kyle Dixon</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/cure.jpeg" alt=""></a>
+                <div class="cover">
+                  <a class="copertina" href="#">
+                    <img src="img/cure.jpeg" alt="">
+                    <div class="overlay"><i class="fa fa-play-circle-o" aria-hidden="true"></i></div>
+                  </a>
+                </div>
                 <p class="titolo_disco">A cure for wellness</p>
                 <p class="artista">Kyle Dixon</p>
               </div>
@@ -113,11 +143,21 @@
             <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
             <div class="dischi">
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/radar.jpeg" alt=""></a>
+                <div class="cover">
+                  <a class="copertina" href="#">
+                    <img src="img/radar.jpeg" alt="">
+                    <div class="overlay"><i class="fa fa-play-circle-o" aria-hidden="true"></i></div>
+                  </a>
+                </div>
                 <p class="titolo_disco">Release Radar</p>
               </div>
               <div class="disco">
-                <a class="copertina" href="#"><img src="img/mixdaily.jpeg" alt=""></a>
+                <div class="cover">
+                  <a class="copertina" href="#">
+                    <img src="img/mixdaily.jpeg" alt="">
+                    <div class="overlay"><i class="fa fa-play-circle-o" aria-hidden="true"></i></div>
+                  </a>
+                </div>
                 <p class="titolo_disco">Daily Mix 1</p>
               </div>
             </div>
@@ -127,7 +167,11 @@
             <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
             <div class="dischi">
               <div class="disco">
-                <a class="copertina" href="#"><img class="circle"src="img/youg.jpeg" alt=""></a>
+                <div class="cover">
+                  <a class="copertina" href="#">
+                    <img class="circle"src="img/youg.jpeg" alt="">
+                  </a>
+                </div>
                 <p class="titolo_disco">Lana Del Rey</p>
               </div>
               <div class="disco">
@@ -144,7 +188,7 @@
             <img src="img/u2.jpg" alt="">
             <div class="">
               <div class="player_artist">
-                <a href="#"><p>U2</p></a> 
+                <a href="#"><p>U2</p></a>
               </div>
               <div class="player_song">
                 <p>Hold me...</p>
