--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
           <div class="top-sidebar">
             <nav>
               <ul>
-                <li class="border_left_green"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-                <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i> Cerca</a></li>
-                <li><a href="#"><img class="scala_20"src="img/libreria.svg" alt=""> La tua libreria</a></li>
+                <li class="border_left_green"><a href="#" class="hover_wh"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="#" class="hover_wh"><i class="fa fa-search" aria-hidden="true"></i> Cerca</a></li>
+                <li><a href="#" class="hover_wh"><img class="scala_20"src="img/libreria.svg" alt=""> La tua libreria</a></li>
               </ul>
             </nav>
             <!-- playlist -->
             <div id="playlist">
               <ul>
                 <li><strong>PLAYLIST</strong></li>
-                <li><a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>  Crea Playlist</li>
-                <li><a href="#">Playlist 01</a></li>
-                <li><a href="#">Playlist 02</a></li>
-                <li><a href="#">Playlist 03</a></li>
-                <li><a href="#">Playlist 04</a></li>
-                <li><a href="#">Playlist 05</a></li>
+                <li><a href="#" class="hover_wh"><i class="fa fa-plus" aria-hidden="true"></i></a>  Crea Playlist</li>
+                <li><a href="#" class="hover_wh">Playlist 01</a></li>
+                <li><a href="#" class="hover_wh">Playlist 02</a></li>
+                <li><a href="#" class="hover_wh">Playlist 03</a></li>
+                <li><a href="#" class="hover_wh">Playlist 04</a></li>
+                <li><a href="#" class="hover_wh">Playlist 05</a></li>
               </ul>
             </div>
           </div>
           <div class="bottom_sidebar">
-            <p><a href="#"><i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i> Installa app</a>  </p>
+            <p><a href="#" class="hover_wh"><i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i> Installa app</a>  </p>
             <div class="line"></div>
             <p><i class="fa fa-user-circle" aria-hidden="true"><strong> Alex</strong></i> </p>
           </div>
@@ -57,19 +57,19 @@
       <section id="main-window">
         <section id="up_bar">
           <div class="">
-            <a class="button" href="#">EFFETTUA L'UPGRADE</a>
+            <a class="button grow" href="#">EFFETTUA L'UPGRADE</a>
           </div>
         </section>
         <!-- spazio principale con album -->
         <section class="album">
           <div class="nav_bar">
             <ul>
-              <li><a href="#">IN EVIDENZA <div class="green"></div> </a> </li>
-              <li><a href="#">PODCAST</a> </li>
-              <li><a href="#">CLASSIFICHE</a> </li>
-              <li><a href="#">GENERI E MOOD</a> </li>
-              <li><a href="#">NUOVE USCITE</a> </li>
-              <li><a href="#">SCOPRI</a> </li>
+              <li><a href="#" class="hover_wh">IN EVIDENZA <div class="green"></div> </a> </li>
+              <li><a href="#" class="hover_wh">PODCAST</a> </li>
+              <li><a href="#" class="hover_wh">CLASSIFICHE</a> </li>
+              <li><a href="#" class="hover_wh">GENERI E MOOD</a> </li>
+              <li><a href="#" class="hover_wh">NUOVE USCITE</a> </li>
+              <li><a href="#" class="hover_wh">SCOPRI</a> </li>
             </ul>
           </div>
           <!-- bordo verde -->
@@ -196,34 +196,34 @@
             </div>
           </div>
           <div class="icon_sx">
-            <i class="fa fa-heart-o" aria-hidden="true"></i>
-            <i class="fa fa-folder-o" aria-hidden="true"></i>
+            <i class="fa fa-heart-o hover_wh pointer" aria-hidden="true"></i>
+            <i class="fa fa-folder-o hover_wh pointer" aria-hidden="true"></i>
           </div>
         </div>
         <div class="player_center">
           <div class="control">
             <div>
-              <i class="fa fa-random" aria-hidden="true"></i>
-              <i class="fa fa-step-backward" aria-hidden="true"></i>
-              <i class="fa fa-play-circle-o" aria-hidden="true"></i>
-              <i class="fa fa-step-forward" aria-hidden="true"></i>
-              <i class="fa fa-repeat" aria-hidden="true"></i>
+              <i class="fa fa-random pointer" aria-hidden="true"></i>
+              <i class="fa fa-step-backward pointer" aria-hidden="true"></i>
+              <i class="fa fa-play-circle-o grow pointer" aria-hidden="true"></i>
+              <i class="fa fa-step-forward pointer" aria-hidden="true"></i>
+              <i class="fa fa-repeat pointer" aria-hidden="true"></i>
             </div>
           </div>
           <div class="time">
             <p>0:25</p>
-            <div class="line_2">
+            <div class="line_2 pointer">
             </div>
-            <div class="line_3">
+            <div class="line_3 pointer">
             </div>
             <p>4:35</p>
           </div>
         </div>
         <div class="player_dx">
-          <i class="fa fa-list-ul" aria-hidden="true"></i>
-          <i class="fa fa-desktop" aria-hidden="true"></i>
-          <i class="fa fa-volume-up" aria-hidden="true"></i>
-          <div class="volume_line">
+          <i class="fa fa-list-ul pointer" aria-hidden="true"></i>
+          <i class="fa fa-desktop pointer" aria-hidden="true"></i>
+          <i class="fa fa-volume-up pointer" aria-hidden="true"></i>
+          <div class="volume_line pointer">
               <div class="line_4">
               </div>
               <div class="line_5">
