Indicatori volume e avanzamento traccia

--- a/index.html
+++ b/index.html
@@ -212,10 +212,9 @@
           </div>
           <div class="time">
             <p>0:25</p>
-            <div class="line_2 pointer">
-            </div>
-            <div class="line_3 pointer">
-            </div>
+            <div class="line_2 pointer"></div>
+            <div class="dot"></div>
+            <div class="line_3 pointer"></div>
             <p>4:35</p>
           </div>
         </div>
@@ -224,14 +223,16 @@
           <i class="fa fa-desktop pointer" aria-hidden="true"></i>
           <i class="fa fa-volume-up pointer" aria-hidden="true"></i>
           <div class="volume_line pointer">
-              <div class="line_4">
-              </div>
-              <div class="line_5">
-              </div>
+              <div class="line_4"></div>
+              <span class="dot"></span>
+              <div class="line_5"></div>
           </div>
 
         </div>
       </section>
     </main>
+
+    <!-- script -->
+    <script src="script/script.js" charset="utf-8"></script>
   </body>
 </html>
