--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
           <!-- bordo verde -->
           <div class="recently_played">
-            <h3>Recently played</h3>
+            <h3 id="played">Recently played</h3>
             <div class="dischi">
               <div class="disco">
                 <div class="cover">
@@ -139,7 +139,7 @@
             </div>
           </div>
           <div class="creato_per">
-            <h3>Creato per John Doe</h3>
+            <h3>Creato per Alex</h3>
             <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
             <div class="dischi">
               <div class="disco">
